# cevio-chatgpt

./: .env.example  Cargo.toml  Makefile.toml
src/: adapters.rs  main.rs
src/adapters/: chatgpt.rs
src/adapters/web/: controllers.rs  routers.rs
src/adapters/web/controllers/: talk_controller.rs
src/adapters/web/routers/: talk_router.rs
src/application/services/: chatgpt.rs
