[package]
name = "cevio-chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.11", features = ["macros"] }
chatgpt_rs = "1.0.0"
chrono = "0.4.24"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.15", features = ["json"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
